[package]
name = "MonteCarloSimulator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
influxdb2 = "0.5.2"
plotters = "0.3.7"
rand = "0.9.1"
rand_chacha = "0.9.0"
serde = "1.0.219"

[dependencies.tokio]
version = "1.45.1"
features = ["rt-multi-thread", "macros"]
